fix disbaled border for dark mode in input

--- a/packages/components/src/styles.css
+++ b/packages/components/src/styles.css
@@ -33,6 +33,7 @@
   --color-sui-primary-content: #f9fbff;
 
   --color-sui-input-text: color-mix(in srgb, var(--color-sui-primary-content) 70%, transparent);
+  --color-sui-input-border-disabled: var(--color-sui-primary);
   --color-sui-input-border: var(--color-sui-primary);
 }
 
